[package]
name = "async-io-macros"
version = "0.1.0"
authors = ["Wim Looman <rust@nemo157.com>"]
edition = "2018"

[workspace]

[dependencies]
async-io-macros-impl = { path = "impl" }
futures-core = { version = "0.3.0", default-features = false }
futures-io = { version = "0.3.0", default-features = false }
pin-project-lite = "0.1.4"

[dev-dependencies]
futures = "0.3.0"
futures-test = "0.3.0"
